fix: styling errors on mobile and large desktop views

--- a/styles/global.css
+++ b/styles/global.css
@@ -83,7 +83,6 @@ textarea {
 }
 
 header {
-  top: 0;
   z-index: 1;
   display: flex;
   align-items: center;
@@ -214,7 +213,9 @@ footer a {
 
 @media (min-width: 768px) {
   header {
-    max-width: 75vw;
+    max-width: 90vw;
+    padding: 1rem 0;
+    margin: 0 auto;
   }
 
   main {
@@ -234,3 +235,16 @@ footer a {
     width: 100vw;
   }
 }
+
+@media(min-width: 1024px) {
+  header {
+    max-width: 80vw;
+  }
+  .cover-image {
+    max-width: 60vw;
+  }
+}
+
+
+
+
